# fortune

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
.github/ISSUE_TEMPLATE/: bug_report.md
fortune/: __init__.py  agent.py  cli.py  heuristics.py  report.py  scanner.py
