[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "fortune-stars"
version     = "1.0.0"
description = "Detect fake GitHub stars on any public repository — fast, free, MIT."
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Aegis Wizard" }]
keywords    = ["github", "stars", "fake", "detection", "osint", "security", "agent", "skill"]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
fortune = "fortune.cli:main"

[project.urls]
Homepage   = "https://github.com/aegiswizard/fortune"
Repository = "https://github.com/aegiswizard/fortune"
Issues     = "https://github.com/aegiswizard/fortune/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["fortune*"]

[tool.black]
line-length    = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "I"]
